<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/topAppBarLayout"
			android:layout_width="match_parent"
			android:layout_height="@dimen/height_65"
			app:layout_constraintTop_toTopOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/screenName"
					style="@style/TextAppearance.Material3.HeadlineLarge"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginStart="@dimen/spacing_15"
					android:gravity="center"
					android:text="@string/statistics_fragment_name"
					android:textSize="30sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<com.google.android.material.checkbox.MaterialCheckBox
					android:id="@+id/earningCheckBox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/spacing_20"
					android:text="@string/earnings"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>
		</com.google.android.material.appbar.AppBarLayout>

		<com.google.android.material.tabs.TabLayout
			android:id="@+id/tabLayoutFilters"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/topAppBarLayout">

			<com.google.android.material.tabs.TabItem
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/your_accounts" />

			<com.google.android.material.tabs.TabItem
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/categories" />
		</com.google.android.material.tabs.TabLayout>

		<androidx.viewpager2.widget.ViewPager2
			android:id="@+id/swipeViewPagerItems"
			android:layout_width="match_parent"
			android:layout_height="120dp"
			android:layout_marginVertical="@dimen/spacing_20"
			android:clipToPadding="false"
			app:layout_constraintTop_toBottomOf="@id/tabLayoutFilters" />

		<com.google.android.material.tabs.TabLayout
			android:id="@+id/tabLayoutGraphs"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@string/categories"
			app:layout_constraintTop_toBottomOf="@id/swipeViewPagerItems">

			<com.google.android.material.tabs.TabItem
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/linechart" />

			<com.google.android.material.tabs.TabItem
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/barChart" />

			<com.google.android.material.tabs.TabItem
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/pieChart" />
		</com.google.android.material.tabs.TabLayout>

		<com.github.mikephil.charting.charts.LineChart
			android:id="@+id/chart_line"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_marginVertical="@dimen/spacing_20"
			android:clipToPadding="false"
			app:layout_constraintTop_toBottomOf="@id/tabLayoutGraphs" />

		<com.github.mikephil.charting.charts.BarChart
			android:id="@+id/chart_bar"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_marginVertical="@dimen/spacing_20"
			android:clipToPadding="false"
			android:visibility="invisible"
			app:layout_constraintTop_toBottomOf="@id/tabLayoutGraphs" />

		<com.github.mikephil.charting.charts.PieChart
			android:id="@+id/chart_pie"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_marginVertical="@dimen/spacing_20"
			android:clipToPadding="false"
			android:visibility="invisible"
			app:layout_constraintTop_toBottomOf="@id/tabLayoutGraphs" />


		<RadioGroup
			android:id="@+id/radioGroupTimePeriod"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:checkedButton="@id/radioButtonWeek"
			android:gravity="center_horizontal"
			android:orientation="horizontal"
			android:padding="16dp"
			app:layout_constraintTop_toBottomOf="@id/chart_line">


			<com.google.android.material.radiobutton.MaterialRadioButton
				android:id="@+id/radioButtonWeek"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/week" />

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:id="@+id/radioButtonFourteen"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/fourteen" />

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:id="@+id/radioButtonMonth"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/month" />

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:id="@+id/radioButtonOther"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/other" />

		</RadioGroup>

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/reverse_text"
			style="@style/TextAppearance.Material3.TitleLarge"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingHorizontal="@dimen/spacing_20"
			android:text="@string/categories"
			app:layout_constraintTop_toBottomOf="@id/radioGroupTimePeriod" />


		<com.github.mikephil.charting.charts.PieChart
			android:id="@+id/semi_chart_pie"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_marginVertical="@dimen/spacing_20"
			android:clipToPadding="false"
			app:layout_constraintTop_toBottomOf="@id/reverse_text" />


	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>